--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: gilroy;
+    src: url(./Gilroy-Light.ttf);
+    font-weight: 400;
+}
+@font-face {
+    font-family: gilroy;
+    src: url(./Gilroy-Thin.ttf);
+    font-weight: 350;
+}
+@font-face {
+    font-family: gilroy;
+    src: url(./Gilroy-UltraLight.ttf);
+    font-weight: 300;
+}
+
 *{
 margin:0;
 padding: 0;
@@ -11,17 +27,6 @@ width: 100%;
     position: relative;
     width: 100%;
 }
-/* #circle{
-    position: fixed;
-    z-index: 100000;
-    top: 0;
-    left: 0;
-    height: .5vw;
-    width: .5vw;
-    transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
-    background-color: orange;
-    border-radius: 50%;
-} */
 #loader{
     position: absolute;
     z-index: 99999999;
