--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 @font-face {
     font-family: gilroy;
-    src: url(./Gilroy-Light.ttf);
+    src: url(./Gilroy-Light.woff2);
     font-weight: 400;
 }
 @font-face {
     font-family: gilroy;
-    src: url(./Gilroy-Thin.ttf);
+    src: url(./Gilroy-Thin.woff2);
     font-weight: 350;
 }
 @font-face {
     font-family: gilroy;
-    src: url(./Gilroy-UltraLight.ttf);
+    src: url(./Gilroy-UltraLight.woff2);
     font-weight: 300;
 }
-
 *{
 margin:0;
 padding: 0;
@@ -27,6 +26,17 @@ width: 100%;
     position: relative;
     width: 100%;
 }
+/* #circle{
+    position: fixed;
+    z-index: 100000;
+    top: 0;
+    left: 0;
+    height: .5vw;
+    width: .5vw;
+    transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
+    background-color: orange;
+    border-radius: 50%;
+} */
 #loader{
     position: absolute;
     z-index: 99999999;
