--- a/style.css
+++ b/style.css
@@ -773,7 +773,6 @@ align-items: center;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgb(121, 65, 65);
     }
     #loadbox{
         height: 20vh;
@@ -782,14 +781,15 @@ align-items: center;
         overflow: hidden;
     }
     #b1,#b2,#b3,#b4{
-        height: 100%;
+        height: 25%;
+        overflow: hidden;
         width: 25%;
     
     }   
-    
     #loadbox span{
         width: 100%;
         height: 100%;
+        overflow: hidden;
         display: block;
         display: flex;
         justify-content: center;
@@ -880,7 +880,6 @@ align-items: center;
         position: relative;
         height: 100vh;
         width: 100%;
-        background-color: hsl(0, 91%, 60%);
     
     }
     #vid{
